--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
     <script src="node_modules/react/dist/react.js"></script>
     <script src="node_modules/react-dom/dist/react-dom.js"></script>
     <script>
+      const MyTitle = () => {
+        return (
+          React.createElement('div', null,
+            React.createElement('h1', null, 'My second component')
+          )
+        );
+      };
+
       const MyFirstComponent = () => {
         return React.createElement('div', null,
-          React.createElement('h1', null, 'This is my first component')
+          React.createElement('h1', {}, 'This is my first component'),
+          React.createElement(MyTitle),
+          React.createElement(MyTitle),
+          React.createElement(MyTitle),
+          React.createElement(MyTitle),
         );
       };
 
